[project]
authors = [
    {name = "Filip Chabik", email = "hadret@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.12"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.11.1",
    "lxml<5.0.0,>=4.9.0",
    "requests<3.0.0,>=2.28.0",
    "SQLAlchemy<2.0.0,>=1.4.39",
    "pydantic<2.0.0,>=1.9.1",
    "python-dotenv<1.0.0,>=0.20.0",
    "mastodon-py<2.0.0,>=1.5.2",
]
name = "tootly"
version = "1.8.0"
description = "Auto-tooting latest posts from my blog"

[dependency-groups]
dev = []
