[project]
authors = [
    {name = "Filip Chabik", email = "hadret@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.12"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "lxml>=5.1.0",
    "SQLAlchemy>=1.4.39",
    "pydantic>=1.9.1",
    "python-dotenv>=0.20.0",
    "mastodon-py>=1.5.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
]
name = "tootly"
version = "2.0.0"
description = "Auto-tooting latest posts from my blog"

[dependency-groups]
dev = []
